[gd_scene load_steps=32 format=3 uid="uid://gvld7w0mgelx"]

[ext_resource type="Script" uid="uid://b4p2pgbcn446j" path="res://ui/hud.gd" id="1_pom5v"]
[ext_resource type="Texture2D" uid="uid://cxq8os622twxo" path="res://ui/ui_assets/panel_bg.png" id="2_pfnlp"]
[ext_resource type="Texture2D" uid="uid://cgp10c3jyepra" path="res://ui/ui_assets/atk_basic.png" id="3_3q2by"]
[ext_resource type="Texture2D" uid="uid://b0i5002lyysft" path="res://ui/ui_assets/atk_magic.png" id="4_li43i"]
[ext_resource type="Texture2D" uid="uid://d4i8fwq42g0ex" path="res://ui/ui_assets/atk_magic_active.png" id="4_tvtyy"]
[ext_resource type="Texture2D" uid="uid://dmhwsyj4pc5jl" path="res://ui/ui_assets/atk_basic_active.png" id="5_li43i"]
[ext_resource type="Texture2D" uid="uid://cpwgau2t0crcu" path="res://ui/ui_assets/icon_attack_basic.png" id="6_8qnlx"]
[ext_resource type="Texture2D" uid="uid://6f2mxp0q2mgk" path="res://ui/ui_assets/key_white.png" id="6_a33y5"]
[ext_resource type="Script" uid="uid://b33262wmwayxf" path="res://scripts/ui/money.gd" id="6_li43i"]
[ext_resource type="LabelSettings" uid="uid://dk1eski2f75j" path="res://fonts/jaini_title.tres" id="6_urddi"]
[ext_resource type="Script" uid="uid://bc7226dsqqx0v" path="res://scripts/ui/score.gd" id="7_a33y5"]
[ext_resource type="Theme" uid="uid://bqk1egs5ko5e7" path="res://ui/style/button_small.tres" id="7_mpo0d"]
[ext_resource type="Theme" uid="uid://bx3y5o1h55d3l" path="res://ui/style/default_button.tres" id="8_37bek"]
[ext_resource type="Texture2D" uid="uid://bhpl64iank5bc" path="res://ui/ui_assets/icon_attack_magic.png" id="8_qrs8l"]
[ext_resource type="Texture2D" uid="uid://e13fmt6rwlpf" path="res://ui/ui_assets/coin.png" id="9_ug41v"]
[ext_resource type="Script" uid="uid://bd4tqkkx1ufpr" path="res://scripts/ui/time.gd" id="10_37bek"]
[ext_resource type="FontFile" uid="uid://cvhya1021biir" path="res://fonts/Bungee-Regular.ttf" id="10_ioimr"]
[ext_resource type="Texture2D" uid="uid://coxv7wsfgbqvt" path="res://ui/ui_assets/key_black.png" id="15_mpo0d"]
[ext_resource type="PackedScene" uid="uid://vmnrmvodcq6y" path="res://ui/notification.tscn" id="19_ioimr"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ug41v"]
texture = ExtResource("3_3q2by")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mpo0d"]
texture = ExtResource("5_li43i")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tlkqj"]
texture = ExtResource("4_li43i")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_urddi"]
texture = ExtResource("4_tvtyy")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_a33y5"]
texture = ExtResource("2_pfnlp")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_37bek"]
texture = ExtResource("3_3q2by")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tlkqj"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_28i83"]
texture = ExtResource("4_tvtyy")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8qnlx"]
texture = ExtResource("5_li43i")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qrs8l"]
texture = ExtResource("4_tvtyy")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ug41v"]
bg_color = Color(0.215686, 0.156863, 0.215686, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mpo0d"]
bg_color = Color(0.957449, 0.902289, 0, 1)
corner_radius_top_left = 8
corner_radius_bottom_left = 8

[node name="Hud" type="Control" node_paths=PackedStringArray("play_pause")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pom5v")
play_pause = NodePath("top/VBoxContainer/VBoxContainer/HBoxContainer2/PlayPause")
atk_basic = SubResource("StyleBoxTexture_ug41v")
atk_basic_active = SubResource("StyleBoxTexture_mpo0d")
atk_magic = SubResource("StyleBoxTexture_tlkqj")
atk_magic_active = SubResource("StyleBoxTexture_urddi")

[node name="top" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 119.0
grow_horizontal = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8

[node name="VBoxContainer" type="VBoxContainer" parent="top"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="top/VBoxContainer"]
layout_mode = 2

[node name="Time" type="Label" parent="top/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "00:00"
label_settings = ExtResource("6_urddi")
horizontal_alignment = 1
script = ExtResource("10_37bek")

[node name="HBoxContainer2" type="HBoxContainer" parent="top/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PlayPause" type="Button" parent="top/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("7_mpo0d")
text = "Pause"

[node name="x1" type="Button" parent="top/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("7_mpo0d")
text = "x1"

[node name="x2" type="Button" parent="top/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("7_mpo0d")
text = "x2"

[node name="x3" type="Button" parent="top/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("7_mpo0d")
text = "x4"

[node name="VBoxContainer2" type="VBoxContainer" parent="top"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="HBoxContainer2" type="HBoxContainer" parent="top/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
theme_override_constants/separation = 8

[node name="TextureRect" type="TextureRect" parent="top/VBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("9_ug41v")

[node name="Money" type="Label" parent="top/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.768627, 0.878431, 0.101961, 1)
theme_override_colors/font_shadow_color = Color(0.159191, 0.159191, 0.159191, 1)
theme_override_fonts/font = ExtResource("10_ioimr")
theme_override_font_sizes/font_size = 24
text = "$0"
script = ExtResource("6_li43i")
base_color = Color(1, 1, 1, 1)
increasing_color = Color(0, 1, 0, 1)
decreasing_color = Color(1, 0, 0, 1)
value_animation_time = 1.5

[node name="HBoxContainer" type="HBoxContainer" parent="top/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="top/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("10_ioimr")
theme_override_font_sizes/font_size = 24
text = "Score:"

[node name="Score" type="Label" parent="top/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("10_ioimr")
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 1
script = ExtResource("7_a33y5")

[node name="HBoxContainer" type="HBoxContainer" parent="top"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="Restart_btn" type="Button" parent="top/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
focus_mode = 0
theme = ExtResource("7_mpo0d")
text = "Restart"

[node name="Restart_btn2" type="Button" parent="top/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
focus_mode = 0
theme = ExtResource("7_mpo0d")
text = "Info"

[node name="TimePanel" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -230.0
offset_top = -163.0
offset_right = 230.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="TimePanel"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 16

[node name="basic_attack" type="HBoxContainer" parent="TimePanel/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="TimePanel/HBoxContainer/basic_attack"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
texture = ExtResource("6_8qnlx")
expand_mode = 1

[node name="Label" type="Label" parent="TimePanel/HBoxContainer/basic_attack"]
layout_mode = 2
text = "Basic Attack:"

[node name="btn_key" type="TextureRect" parent="TimePanel/HBoxContainer/basic_attack"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("6_a33y5")
expand_mode = 1

[node name="Label" type="Label" parent="TimePanel/HBoxContainer/basic_attack/btn_key"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -6.5
offset_top = -2.0
offset_right = 6.5
offset_bottom = 21.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Q"
horizontal_alignment = 1
vertical_alignment = 1

[node name="magic_attack" type="HBoxContainer" parent="TimePanel/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="TimePanel/HBoxContainer/magic_attack"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("8_qrs8l")
expand_mode = 1

[node name="Label" type="Label" parent="TimePanel/HBoxContainer/magic_attack"]
layout_mode = 2
text = "Magic Attack:"

[node name="btn_key" type="TextureRect" parent="TimePanel/HBoxContainer/magic_attack"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("6_a33y5")
expand_mode = 1

[node name="Label" type="Label" parent="TimePanel/HBoxContainer/magic_attack/btn_key"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -6.5
offset_top = -2.0
offset_right = 6.5
offset_bottom = 21.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "W"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="TimePanel"]
custom_minimum_size = Vector2(460, 124)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxTexture_a33y5")

[node name="MarginContainer" type="MarginContainer" parent="TimePanel/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 24

[node name="Panel" type="Panel" parent="TimePanel/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TimePanel/PanelContainer/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="TimePanel/PanelContainer/MarginContainer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_37bek")

[node name="MarginContainer" type="MarginContainer" parent="TimePanel/PanelContainer/MarginContainer/Panel/HBoxContainer/Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Selected" type="Panel" parent="TimePanel/PanelContainer/MarginContainer/Panel/HBoxContainer/Button/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tlkqj")

[node name="MarginContainer" type="MarginContainer" parent="TimePanel/PanelContainer/MarginContainer/Panel/HBoxContainer/Button/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8

[node name="btn_key" type="TextureRect" parent="TimePanel/PanelContainer/MarginContainer/Panel/HBoxContainer/Button/MarginContainer/MarginContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("6_a33y5")
expand_mode = 1

[node name="Label" type="Label" parent="TimePanel/PanelContainer/MarginContainer/Panel/HBoxContainer/Button/MarginContainer/MarginContainer/btn_key"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -6.5
offset_top = -2.0
offset_right = 6.5
offset_bottom = 21.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button2" type="Button" parent="TimePanel/PanelContainer/MarginContainer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_28i83")

[node name="MarginContainer" type="MarginContainer" parent="TimePanel/PanelContainer/MarginContainer/Panel/HBoxContainer/Button2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Selected" type="Panel" parent="TimePanel/PanelContainer/MarginContainer/Panel/HBoxContainer/Button2/MarginContainer"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tlkqj")

[node name="MarginContainer" type="MarginContainer" parent="TimePanel/PanelContainer/MarginContainer/Panel/HBoxContainer/Button2/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8

[node name="btn_key" type="TextureRect" parent="TimePanel/PanelContainer/MarginContainer/Panel/HBoxContainer/Button2/MarginContainer/MarginContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("15_mpo0d")
expand_mode = 1

[node name="Label" type="Label" parent="TimePanel/PanelContainer/MarginContainer/Panel/HBoxContainer/Button2/MarginContainer/MarginContainer/btn_key"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -6.5
offset_top = -2.0
offset_right = 6.5
offset_bottom = 21.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button3" type="Button" parent="TimePanel/PanelContainer/MarginContainer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_8qnlx")

[node name="MarginContainer" type="MarginContainer" parent="TimePanel/PanelContainer/MarginContainer/Panel/HBoxContainer/Button3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Selected" type="Panel" parent="TimePanel/PanelContainer/MarginContainer/Panel/HBoxContainer/Button3/MarginContainer"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tlkqj")

[node name="MarginContainer" type="MarginContainer" parent="TimePanel/PanelContainer/MarginContainer/Panel/HBoxContainer/Button3/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8

[node name="btn_key" type="TextureRect" parent="TimePanel/PanelContainer/MarginContainer/Panel/HBoxContainer/Button3/MarginContainer/MarginContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("15_mpo0d")
expand_mode = 1

[node name="Label" type="Label" parent="TimePanel/PanelContainer/MarginContainer/Panel/HBoxContainer/Button3/MarginContainer/MarginContainer/btn_key"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -6.5
offset_top = -2.0
offset_right = 6.5
offset_bottom = 21.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button4" type="Button" parent="TimePanel/PanelContainer/MarginContainer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_qrs8l")

[node name="MarginContainer" type="MarginContainer" parent="TimePanel/PanelContainer/MarginContainer/Panel/HBoxContainer/Button4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Selected" type="Panel" parent="TimePanel/PanelContainer/MarginContainer/Panel/HBoxContainer/Button4/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tlkqj")

[node name="MarginContainer" type="MarginContainer" parent="TimePanel/PanelContainer/MarginContainer/Panel/HBoxContainer/Button4/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8

[node name="btn_key" type="TextureRect" parent="TimePanel/PanelContainer/MarginContainer/Panel/HBoxContainer/Button4/MarginContainer/MarginContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("6_a33y5")
expand_mode = 1

[node name="Label" type="Label" parent="TimePanel/PanelContainer/MarginContainer/Panel/HBoxContainer/Button4/MarginContainer/MarginContainer/btn_key"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -6.5
offset_top = -2.0
offset_right = 6.5
offset_bottom = 21.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "4"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="TimePanel/PanelContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ProgressBar" type="ProgressBar" parent="TimePanel/PanelContainer/MarginContainer2"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_ug41v")
theme_override_styles/fill = SubResource("StyleBoxFlat_mpo0d")
value = 30.0
show_percentage = false

[node name="Start_btn" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme = ExtResource("8_37bek")
text = "Start"

[node name="Notification" parent="." instance=ExtResource("19_ioimr")]
layout_mode = 1

[connection signal="pressed" from="top/VBoxContainer/VBoxContainer/HBoxContainer2/PlayPause" to="." method="_on_play_pause_pressed"]
[connection signal="pressed" from="top/VBoxContainer/VBoxContainer/HBoxContainer2/x1" to="." method="_on_x_1_pressed"]
[connection signal="pressed" from="top/VBoxContainer/VBoxContainer/HBoxContainer2/x2" to="." method="_on_x_2_pressed"]
[connection signal="pressed" from="top/VBoxContainer/VBoxContainer/HBoxContainer2/x3" to="." method="_on_x_3_pressed"]
